--- a/src/components/frame/index.less
+++ b/src/components/frame/index.less
@@ -1,8 +1,10 @@
 .t-header{
     height: 64px;
     background: #fff;
+    display: flex;
     .logo{
         height: 64px;
+        flex: 1;
         img{
             height: 64px;
         }
